--- a/carpol/src/app/dashboard/dashboard_passenger/search-active-rides/request-ride-dialog/request-ride-dialog.component.html
+++ b/carpol/src/app/dashboard/dashboard_passenger/search-active-rides/request-ride-dialog/request-ride-dialog.component.html
@@ -1,6 +1,6 @@
-<section><p>
-    Please confirm that you want to request a ride
-  </p> <b>{{ data.data_name }}</b>
+<section><p class="pclass">
+    Please confirm your requets for ride  <b>{{ data.data_name }}</b>
+  </p>
   
   
   <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
