--- a/carpol/src/app/frontpage/signup/signup.component.html
+++ b/carpol/src/app/frontpage/signup/signup.component.html
@@ -2,7 +2,7 @@
     <div  fxLayout="row" fxLayoutAlign="center center">
         <img src="/assets/registerImage.jpg"/>
     </div>
-    <h1 fxLayout="row" fxLayoutGap="10px"  fxLayoutAlign="center center">Carpooling REGISTER page</h1>
+    <h1 fxLayout="row" fxLayoutGap="10px"  fxLayoutAlign="center center">Carpooling REGISTRATION page</h1>
 
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px"
     #f="ngForm" (ngSubmit)="onSubmit(f)">
